2006-12-04  Nurdin Premji  <npremji@redhat.com>

	* TestIsa.java: Added.	
	* Task.java: (hasIsa): Added.

2006-11-29  Andrew Cagney  <cagney@redhat.com>

	* TestTaskTerminateObserver.java (AttachedCounter): Delete.
	(testBlockingWhileTerminating): Delete, now covered by
	testAttachToUnjoinedTask.
	* TestLib.java (assertRunWhileProcNotRemoved): Delete.

2006-11-28  Mike Cvet  <mcvet@redhat.com>

	* TestRegMemModify.java (TestX8664ModifyInternals.X8664Isa): Renamed
	from EMT64Isa.
	* TestRegs.java (TestX8664RegsInternals.X8664Isa): Renamed from 
	EMT64Isa.
	* IsaX8664.java (X8664Register): Renamed from EMT64Register.
	(X8664SegmentRegister): Renamed from EMT64SegmentRegister.
	(X8664FPRegister): Renamed from EMT64FPRegister.

2006-11-28  Nurdin Premji  <npremji@redhat.com>

	* DummyHost.java (sendRefresh): Removed boolean.
	* LinuxHost.java (sendRefresh): Ditto.
	* HostState.java (running.handleRefresh): Ditto.
	(handleRefresh): Ditto.
	* Host.java (sendRefresh): Ditto.
	(requestFindProc.Event.execute): Ditto.

	* Host.java (requestFindProc (boolean refreshAll ...)): Removed.

	* TestFindProc.java (doFindProc): Changed to use simplified requestFindProc.
	Previously did not refresh tasks.
	(testFindFailed): Removed, changing to use simplified would be the same as
	testFindAndRefreshFailed.

	* TestBreakpoints.java (setUp): Changed to use simplified requestFindProc.
	* TestFindProc.java (testFindAndRefreshFailed): Ditto. 
	* TestLib.java (Child.assertFindProcAndTasks): Ditto.
	* TestSyscallSignal.java (setUp): Ditto.
	* TestSyscallRunning.java (setUp): 	Ditto.
	* TestTaskSyscallObserver.java (TestSyscallInterruptInternals.TestSyscallInterruptInternals): Ditto.

	* Host.java (requestFindProc): Added. Assumes refresh tasks.

	* TestLib.java (Child.findProcUsingRefresh): Removed.
	(Child.findProcUsingRefresh (boolean) ): Ditto.

	* TestRefresh.java (testRefreshDaemon): Changed to use assertFindProcAndTasks.
	Used to just find task.
	(testUnattachedSingleExec): Ditto.