@@ -1,5 +1,9 @@
 2006-12-04  Nurdin Premji  <npremji@redhat.com>
 
+	* TestIsa.java (testAttachedCreateChild): Enabled.
+	(testIsaSingleton): Ditto.
+	* Task.java (hasIsa): Fixed, should be true when isa is not null.
+
 	* TestIsa.java: Added.	
 	* Task.java: (hasIsa): Added.
 
